# dormms

./: .gitignore  MANIFEST.in  README.rst  setup.cfg
docs/source/: lennard_jones.rst
lennard_jones/canonical_monte_carlo/: 2-run.sh  launch.py
lennard_jones/reference_configurations/: 1-install-feasstv0.25.1.sh  2-run.py  run.py  srsw_ref_config4.csv  srsw_ref_config_triclinic3.csv
software/: feasstv0.25.1_install.sh
src/dormms/: lennard_jones.py
src/dormms/lennard_jones/canonical_monte_carlo/: 1-install-feasstv0.25.1.sh  data.json  launch.py
src/dormms/lennard_jones/reference_configurations/: 2-run.sh  data.json  run.py
