[metadata]
name = dormms
version = 0.0.1
author = Harold Wickes Hatch
author_email = harold.hatch@nist.gov
description = A Python package to access a database of reproducible models and molecular simluations
long_description = See https://pages.nist.gov/dormms for more information.
url = https://pages.nist.gov/dormms
project_urls =
    #Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
